# OpenGL_Playground

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  Makefile  README.md  build.sh  flake.nix  main.cpp  shell.nix
assets/: README.md
assets/skybox/: readme.MD
include/: BasicMesh.h  BasicMesh.hpp  Camera.h  Camera.hpp  DataObject.h  DataObject.hpp  GUI.h  GUI.hpp  Mesh.h  Model.h  Model.hpp  OPPCH.h  RayTracing.hpp  ShaderClass.h  ShaderClass.hpp  Utils.h  Window.h
include/core/: ebo.hpp  fbo.hpp  ubo.hpp  vao.hpp  vbo.hpp
include/geom/: gaussianSplat.hpp  mesh.hpp  pointCloud.hpp
include/render/: cubemap_renderer.hpp  drawable.hpp  gs_renderer.hpp  mesh_renderer.hpp  model_renderer.hpp
include/resource/: texture.hpp
include/tests/: Test.h  Test.hpp  TestBVH.h  TestBVH.hpp  TestCubeMap.h  TestCubeMap.hpp  TestCudaMatMul.hpp  TestGaussian.h  TestGaussian.hpp  TestGeometry.h  TestGeometry.hpp  TestGs.h  TestGs.hpp  TestLighting.h  TestLighting.hpp  TestModel.h  TestModel.hpp  TestMultipleObj.hpp  TestParallaxMapping.hpp  TestPhysXHelloWorld.hpp  TestPhysXMaterial.hpp  TestPhysXPendulum.hpp  TestRoom.h  TestRoom.hpp  TestRtBVH.hpp  TestRtSphere.hpp  TestSdfBlend.h  TestSdfBlend.hpp  TestSdfTaipei101.h  TestSdfTaipei101.hpp  TestTriangle.h  TestTriangle.hpp
shaders/: acc_framebuffer_frag.glsl  acc_framebuffer_vert.glsl  cuda_matmul_frag.glsl  cuda_matmul_vert.glsl  default_frag.glsl  default_vert.glsl  gaussian_frag.glsl  gaussian_vert.glsl  geo_frag.glsl  geo_gert.glsl  light_frag.glsl  light_vert.glsl  model_frag.glsl  model_vert.glsl  multiple_obj_vert.glsl  parallax_frag.glsl  parallax_vert.glsl  physx_hello_frag.glsl  physx_hello_vert.glsl  physx_material_frag.glsl  physx_material_vert.glsl  physx_pendulum_frag.glsl  pointcloud_frag.glsl  pointcloud_vert.glsl  room_frag.glsl  room_vert.glsl  rt_bvh_frag.glsl  rt_bvh_vert.glsl  rt_sphere_frag.glsl  rt_sphere_vert.glsl  sdf_blend_frag.glsl  sdf_taipei101_frag.glsl  skybox_frag.glsl  skybox_vert.glsl
src/: BasicMesh.cpp  Camera.cpp  DataObject.cpp  GUI.cpp  Mesh.cpp  Model.cpp  RayTracing.cpp  ShaderClass.cpp  Utils.cpp  Window.cpp
src/core/: ebo.cpp  fbo.cpp  ubo.cpp  vao.cpp  vbo.cpp
src/geom/: gaussianSplat.cpp  mesh.cpp  pointCloud.cpp
src/render/: cubemap_renderer.cpp  gs_renderer.cpp  mesh_renderer.cpp  model_renderer.cpp
src/resource/: texture.cpp
src/tests/: Test.cpp  TestBVH.cpp  TestCubeMap.cpp  TestCudaMatMul.cpp  TestGaussian.cpp  TestGeometry.cpp  TestGs.cpp  TestLighting.cpp  TestModel.cpp  TestMultipleObj.cpp  TestParallaxMapping.cpp  TestPhysXHelloWorld.cpp  TestPhysXMaterial.cpp  TestPhysXPendulum.cpp  TestRoom.cpp  TestRtBVH.cpp  TestRtSphere.cpp  TestSdfBlend.cpp  TestSdfTapipei101.cpp  TestTriangle.cpp
tool/convert_seamless_texture/: convert.py
